[gd_scene load_steps=4 format=2]

[ext_resource path="res://Media/icons/conditions/condition_immobilized.svg" type="Texture2D" id=1]
[ext_resource path="res://Resources/Themes/UnitUI/UnitUI_theme.tres" type="Theme" id=2]
[ext_resource path="res://Scripts/Unit/UnitHUD/StatusContainer.gd" type="Script" id=3]

[node name="StatusContainer" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -912.0
offset_bottom = -575.0
size_flags_horizontal = 0
alignment = 2
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
offset_left = 88.0
offset_top = 6.0
offset_right = 88.0
offset_bottom = 19.0
size_flags_horizontal = 0
theme = ExtResource( 2 )
valign = 1

[node name="TextureRect" type="TextureRect" parent="."]
offset_left = 92.0
offset_right = 112.0
offset_bottom = 25.0
custom_minimum_size = Vector2( 20, 20 )
size_flags_horizontal = 0
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="LetterTimer" type="Timer" parent="."]
wait_time = 0.2

[node name="GlitchTimer" type="Timer" parent="."]
wait_time = 0.05

[connection signal="timeout" from="LetterTimer" to="." method="_on_LetterTimer_timeout"]
[connection signal="timeout" from="GlitchTimer" to="." method="_on_GlitchTimer_timeout"]
